- Don't refresh trigger channels when initializing
- Use new java type scheme
- Set minimal required firmware version based on feature use

2020-02-10: 2.0.0 Beta 18
- Schedule updates for channels without callback
- Add scaling for thermal images
- Fix some reinitialization/dispose bugs
- Fix log messages
- Add firmware update support for standard (legacy) and CoMCU Bricklets
- Change Multi Touch Bricklet electrodes back to stateful channels

2020-02-28: 2.0.0 Beta 19
- Add support for:
    - CAN Bricklet
    - CAN 2.0 Bricklet
    - NFC RFID Bricklet
    - NFC Bricklet
    - RS232 Bricklet
    - RS232 2.0 Bricklet
    - RS485 Bricklet (RS485 and Modbus Master for now)
- Fix logger name of TinkerforgeConfigDescriptionProvider
- Use legacy java type scheme
- Allow flashing if device is offline but reachable
- Add missing channel labels and descriptions
- Add more actions

2020-03-02: 2.0.0 Beta 20
- Fix choice options
- Improve error messages and timeout handling
- Fix order of discovery and removal of old discovery results
- Fix IO-16 edge counter
- Fix race condition in reachability check

2020-04-08: 2.0.0 Beta 21
- Compile against Java bindings
- Add online documentation
- Add more meta information to channels and parameters
- Use DecimalType if no unit is used
- Fix discovery clean up if more than one Brick Daemon is used
- Let RS485 actions return empty map instead of null on request errors
- Fix LED Strip channels
- Fix HAT Brick sleep command and label
- Add missing channels and actions:
    - Master Brick USB voltage channel
    - Analog value channel for old Bricklets
    - Compass Bricklet magnetic flux density channel
    - Multi Touch 2.0 Bricklet touch LED configuration
    - PTC resistance channels
    - Segment Display 2.0 Bricklet set numeric value action
- Remove get bootloader mode action

2020-04-29: 2.0.0 Beta 22
- Fix channel reconfiguration logic
- Fix Master Brick required firmware version
- Fix LED strip index parsing