@@ -592,11 +592,13 @@ com['openhab'] = {
                     description="The RGB(W) values for the LEDs. Changes will be applied the next time the Frame Started Channel triggers.\n\nCommand format is a ','-separated list of integers. The first integer is the index of the first LED to set, additional integers are the values to set. Values are between 0 (off) and 255 (on). If the channel mapping has 3 colors, you need to give the data in the sequence R,G,B,R,G,B,R,G,B,... if the channel mapping has 4 colors you need to give data in the sequence R,G,B,W,R,G,B,W,R,G,B,W...\n\nThe data is double buffered and the colors will be transfered to the LEDs when the next frame duration ends. You can set at most 2048 RGB values or 1536 RGBW values.\n\n For example sending 2,255,0,0,0,255,0,0,0,255 will set the LED 2 to red, LED 3 to green and LED 4 to blue."),
         oh_generic_channel_type('All LEDs', 'Color', 'All LEDs',
                     params=[{
-                        'packet': 'Set LED Values Low Level',
-                        'element': 'Index',
+                        'virtual': True,
 
                         'name': 'LED Count',
                         'type': 'integer',
+                        'min': 0,
+                        'max': 2048,
+                        'default': 0,
 
                         'label': 'LED Count',
                         'description': 'The number of LEDs to control.'
